Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48672

winrt: Camera stop while probing frames leads to crash on certain Lumia devices

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Multimedia
    • Windows 8.1 x64
      MSVC 2013
      Nokia Lumia 920 (WinPhone 8.1)
      Nokia Lumia 1020 (WinPhone 8.1)
    • WinRT
    • 787dcd9e4d40d9d59b90544e4c4bdea13ef532b8

      Steps:
      1 . Run attached example
      2. Toggle camera on/off repeatedly
      Expected: Camera turns on and off
      Actual: Some point app crashes.

      System out:

      D3D11: Removing Device.
      Failed to lock camera frame buffer (The GPU device instance has been suspended. Use GetDeviceRemovedReason to determine the appropriate action.)
      Failed to unlock camera frame buffer ({Page Unlocked}
      The page protection of a locked page was changed to 'No Access' and the page was unlocked from memory and from the process.)
      

      Frame buffers gets page locked when camera is stopped on some Lumia devices. If this happens same time application has frame mapped, unmapping will fail and suspend camera device.

      Workaround is to delay camera stop until frame has been unmapped on application side.

      Crash happens because loaded state handler is called twice and on second pass d->mediasink is null.

        1. TestBench.7z
          2 kB
          Samuel Nevala
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes